--- a/A01794022_semana2_actividad_01.ipynb
+++ b/A01794022_semana2_actividad_01.ipynb
@@ -95,7 +95,7 @@
       "metadata": {
         "id": "OJ26dAfhdFnf"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
       "metadata": {
         "id": "QHUmJyjDdGNP"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -122,10 +122,25 @@
         "type(docs) == list   # Verifica que tu variable \"docs\" es una lista"
       ],
       "metadata": {
-        "id": "L6WzrSrodG-Y"
+        "id": "L6WzrSrodG-Y",
+        "outputId": "d4a17fdf-d7dd-4a86-dde1-d8798fb2be7c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -133,10 +148,25 @@
         "len(docs)==1000  # verifica que la longitud de \"docs\" es de mil comentarios."
       ],
       "metadata": {
-        "id": "QIK1u9WS2FtS"
+        "id": "QIK1u9WS2FtS",
+        "outputId": "04927653-4f05-4001-de96-ec39ff4067bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -144,10 +174,34 @@
         "docs[0:10]     # observa algunos de los primeros comentarios"
       ],
       "metadata": {
-        "id": "9AMLIfQvJqNZ"
+        "id": "9AMLIfQvJqNZ",
+        "outputId": "b5e0b82f-e054-4ba0-d52a-81bf94e788c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Wow... Loved this place.\\n',\n",
+              " 'Crust is not good.\\n',\n",
+              " 'Not tasty and the texture was just nasty.\\n',\n",
+              " 'Stopped by during the late May bank holiday off Rick Steve recommendation and loved it.\\n',\n",
+              " 'The selection on the menu was great and so were the prices.\\n',\n",
+              " 'Now I am getting angry and I want my damn pho.\\n',\n",
+              " \"Honeslty it didn't taste THAT fresh.)\\n\",\n",
+              " 'The potatoes were like rubber and you could tell they had been made up ahead of time being kept under a warmer.\\n',\n",
+              " 'The fries were great too.\\n',\n",
+              " 'A great touch.\\n']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -186,21 +240,49 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Y = [re.sub(r'\\n','', i) for i in docs]"
+      ],
       "metadata": {
         "id": "PwbYYIuZn8pE"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Y[0:10]"
+      ],
       "metadata": {
-        "id": "j-0qeh2Jn8l1"
+        "id": "j-0qeh2Jn8l1",
+        "outputId": "3e2a5376-81bb-4367-b8dd-2ccc95223aef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Wow... Loved this place.',\n",
+              " 'Crust is not good.',\n",
+              " 'Not tasty and the texture was just nasty.',\n",
+              " 'Stopped by during the late May bank holiday off Rick Steve recommendation and loved it.',\n",
+              " 'The selection on the menu was great and so were the prices.',\n",
+              " 'Now I am getting angry and I want my damn pho.',\n",
+              " \"Honeslty it didn't taste THAT fresh.)\",\n",
+              " 'The potatoes were like rubber and you could tell they had been made up ahead of time being kept under a warmer.',\n",
+              " 'The fries were great too.',\n",
+              " 'A great touch.']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -224,7 +306,7 @@
       "metadata": {
         "id": "0p3kMXfddICc"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -233,7 +315,7 @@
       "metadata": {
         "id": "SPVM1MCWdH6Z"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -256,7 +338,7 @@
       "metadata": {
         "id": "yKHJkZKo_nW5"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -265,7 +347,7 @@
       "metadata": {
         "id": "L3q08aq69sNn"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -289,7 +371,7 @@
       "metadata": {
         "id": "K8VuZxvTMYj6"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -298,7 +380,7 @@
       "metadata": {
         "id": "PmKgX7sCMcDx"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -320,7 +402,7 @@
       "metadata": {
         "id": "nZZ5zKUOMeGD"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -329,7 +411,7 @@
       "metadata": {
         "id": "l1mFvUEZMe8s"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -351,7 +433,7 @@
       "metadata": {
         "id": "6vhe9-Y-MhL9"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -360,7 +442,7 @@
       "metadata": {
         "id": "_t0a5xWDMhQ5"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -382,7 +464,7 @@
       "metadata": {
         "id": "kqqyRChVMjol"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -391,7 +473,7 @@
       "metadata": {
         "id": "UXd0VQluMj_x"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -413,7 +495,7 @@
       "metadata": {
         "id": "A8Nf3B_cMlqg"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -422,7 +504,7 @@
       "metadata": {
         "id": "svS4-vvPMl6f"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -446,7 +528,7 @@
       "metadata": {
         "id": "PYxdp3uhMoD0"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -455,7 +537,7 @@
       "metadata": {
         "id": "BR7e2F4FMof-"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -477,7 +559,7 @@
       "metadata": {
         "id": "Vb0ndRGAMqdL"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -486,7 +568,7 @@
       "metadata": {
         "id": "dLPTRPnTMqqx"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -510,7 +592,7 @@
       "metadata": {
         "id": "OwU-a7eGMsub"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -519,7 +601,7 @@
       "metadata": {
         "id": "SgzIL74ZMtGw"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -541,7 +623,7 @@
       "metadata": {
         "id": "I4TSofBMMv9y"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -550,7 +632,7 @@
       "metadata": {
         "id": "AhGq6De2Mvyh"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -588,7 +670,7 @@
       "metadata": {
         "id": "K3kQzPOPMx0w"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -597,7 +679,7 @@
       "metadata": {
         "id": "mYEDlHSFMyJN"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -621,7 +703,7 @@
       "metadata": {
         "id": "kbAL9-v0V-jx"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -630,7 +712,7 @@
       "metadata": {
         "id": "DZs_etmiV-fd"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -661,7 +743,7 @@
       "metadata": {
         "id": "6FP4FF3KXGxm"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -670,7 +752,7 @@
       "metadata": {
         "id": "CD8yjyq1ZrwY"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -679,7 +761,7 @@
       "metadata": {
         "id": "4ZPi5prKZro5"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
