--- a/A01794022_semana2_actividad_01.ipynb
+++ b/A01794022_semana2_actividad_01.ipynb
@@ -123,10 +123,10 @@
       ],
       "metadata": {
         "id": "L6WzrSrodG-Y",
-        "outputId": "d4a17fdf-d7dd-4a86-dde1-d8798fb2be7c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d4a17fdf-d7dd-4a86-dde1-d8798fb2be7c"
       },
       "execution_count": 5,
       "outputs": [
@@ -149,10 +149,10 @@
       ],
       "metadata": {
         "id": "QIK1u9WS2FtS",
-        "outputId": "04927653-4f05-4001-de96-ec39ff4067bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "04927653-4f05-4001-de96-ec39ff4067bb"
       },
       "execution_count": 6,
       "outputs": [
@@ -175,10 +175,10 @@
       ],
       "metadata": {
         "id": "9AMLIfQvJqNZ",
-        "outputId": "b5e0b82f-e054-4ba0-d52a-81bf94e788c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b5e0b82f-e054-4ba0-d52a-81bf94e788c2"
       },
       "execution_count": 7,
       "outputs": [
@@ -256,10 +256,10 @@
       ],
       "metadata": {
         "id": "j-0qeh2Jn8l1",
-        "outputId": "3e2a5376-81bb-4367-b8dd-2ccc95223aef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3e2a5376-81bb-4367-b8dd-2ccc95223aef"
       },
       "execution_count": 10,
       "outputs": [
@@ -302,7 +302,15 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Para facilidad vamos a crear una variable con todas las palabras en un solo string, esta se usará cuando no necesitamos procesar\n",
+        "# comentarios de manera individual\n",
+        "one_line = ' '.join(docs)\n",
+        "\n",
+        "matches = re.findall(r'(\\w+)(!{2,})',one_line)\n",
+        "matches_with_counts = [(match[0],len(match[1])) for match in matches]\n",
+        "matches_with_counts"
+      ],
       "metadata": {
         "id": "0p3kMXfddICc"
       },
@@ -311,7 +319,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "len(matches)"
+      ],
       "metadata": {
         "id": "SPVM1MCWdH6Z"
       },
@@ -334,7 +344,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "capitalized_words = re.findall(r'\\b[A-Z]+\\b',one_line)\n",
+        "capitalized_words"
+      ],
       "metadata": {
         "id": "yKHJkZKo_nW5"
       },
@@ -343,7 +356,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "len(capitalized_words)"
+      ],
       "metadata": {
         "id": "L3q08aq69sNn"
       },
@@ -367,7 +382,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "capitalized_comments = [ comment for comment in docs if not re.findall(r'[a-z]', comment)]\n",
+        "capitalized_comments"
+      ],
       "metadata": {
         "id": "K8VuZxvTMYj6"
       },
@@ -376,7 +394,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "len(capitalized_comments)"
+      ],
       "metadata": {
         "id": "PmKgX7sCMcDx"
       },
@@ -398,7 +418,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "acentuated_word = re.findall(r'\\w*(?:á|é|í|ó|ú)', one_line)\n",
+        "acentuated_word"
+      ],
       "metadata": {
         "id": "nZZ5zKUOMeGD"
       },
@@ -407,7 +430,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "len(acentuated_word)"
+      ],
       "metadata": {
         "id": "l1mFvUEZMe8s"
       },
@@ -429,7 +454,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "numerical_values = re.findall(r'\\$(\\d*\\.*\\d*)', one_line)\n",
+        "numerical_values"
+      ],
       "metadata": {
         "id": "6vhe9-Y-MhL9"
       },
@@ -438,7 +466,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "len(numerical_values)"
+      ],
       "metadata": {
         "id": "_t0a5xWDMhQ5"
       },
@@ -460,7 +490,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "love_like_words = re.findall(r'\\blov\\w+', one_line, re.IGNORECASE)\n",
+        "love_like_words"
+      ],
       "metadata": {
         "id": "kqqyRChVMjol"
       },
@@ -469,7 +502,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "len(love_like_words)"
+      ],
       "metadata": {
         "id": "UXd0VQluMj_x"
       },
@@ -491,7 +526,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "so_good = re.findall(r'\\b(?:so{2,}|go{3,}d+)\\b', one_line, re.IGNORECASE)\n",
+        "so_good"
+      ],
       "metadata": {
         "id": "A8Nf3B_cMlqg"
       },
@@ -500,7 +538,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "len(so_good)"
+      ],
       "metadata": {
         "id": "svS4-vvPMl6f"
       },
@@ -524,7 +564,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ten_or_more = re.findall(r'\\b\\w{11,}\\b', one_line)\n",
+        "ten_or_more"
+      ],
       "metadata": {
         "id": "PYxdp3uhMoD0"
       },
@@ -533,7 +576,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "len(ten_or_more)"
+      ],
       "metadata": {
         "id": "BR7e2F4FMof-"
       },
@@ -555,7 +600,12 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "docs_wo_first_word = [re.sub(r'^\\W*\\w+\\b',r'',comment) for comment in docs]\n",
+        "docs_wo_first_word_one_line = ' '.join(docs_wo_first_word)\n",
+        "first_capital_last_lower = re.findall(r'\\b[A-Z]\\w*[a-z]\\b', docs_wo_first_word_one_line)\n",
+        "first_capital_last_lower"
+      ],
       "metadata": {
         "id": "Vb0ndRGAMqdL"
       },
@@ -564,7 +614,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "len(first_capital_last_lower)"
+      ],
       "metadata": {
         "id": "dLPTRPnTMqqx"
       },
@@ -588,7 +640,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "dashed_words = re.findall(r'\\b\\w+(?:\\-\\w+){1,}\\b', one_line)\n",
+        "dashed_words"
+      ],
       "metadata": {
         "id": "OwU-a7eGMsub"
       },
@@ -597,7 +652,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "len(dashed_words)"
+      ],
       "metadata": {
         "id": "SgzIL74ZMtGw"
       },
@@ -619,7 +676,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ing_ed_words = re.findall(r'\\b\\w+(?:ing|ed)\\b', one_line)\n",
+        "ing_ed_words"
+      ],
       "metadata": {
         "id": "I4TSofBMMv9y"
       },
@@ -628,7 +688,12 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ing_words = re.findall(r'ing\\b', ' '.join(ing_ed_words))\n",
+        "print(\"Total de palabras terminadas en 'ing: \" + str(len(ing_words)))\n",
+        "ed_words = re.findall(r'ed\\b', ' '.join(ing_ed_words))\n",
+        "print(\"Total de palabras terminadas en 'ed: \" + str(len(ed_words)))"
+      ],
       "metadata": {
         "id": "AhGq6De2Mvyh"
       },
@@ -666,7 +731,12 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "docs_lower_case = [comment.lower() for comment in docs]\n",
+        "docs_lower_case_just_words_and_spaces = [re.sub(r'(?!\\s)\\W',r'', comment) for comment in docs_lower_case]\n",
+        "docs_lower_case_just_words = [re.sub(r'\\s+',r' ', comment) for comment in docs_lower_case_just_words_and_spaces]\n",
+        "docs_lower_case_just_words[0:10]"
+      ],
       "metadata": {
         "id": "K3kQzPOPMx0w"
       },
@@ -699,7 +769,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "docs_tokenized = [comment.split() for comment in docs_lower_case_just_words]\n",
+        "docs_tokenized"
+      ],
       "metadata": {
         "id": "kbAL9-v0V-jx"
       },
@@ -708,7 +781,11 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "docs_lower_case_just_words_one_line = ' '.join(docs_lower_case_just_words)\n",
+        "flat_tokens = re.findall(r'\\w+',docs_lower_case_just_words_one_line)\n",
+        "len(flat_tokens)"
+      ],
       "metadata": {
         "id": "DZs_etmiV-fd"
       },
@@ -748,7 +825,12 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "mis_stopwords_regex = '(' + '|'.join(mis_stopwords) + ')'\n",
+        "docs_lower_case_just_words_one_line_clean = re.sub(mis_stopwords_regex, r'', docs_lower_case_just_words_one_line)\n",
+        "flat_tokens_clean = re.findall(r'\\w+',docs_lower_case_just_words_one_line_clean)\n",
+        "flat_tokens_clean"
+      ],
       "metadata": {
         "id": "CD8yjyq1ZrwY"
       },
@@ -757,11 +839,150 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "len(flat_tokens_clean)"
+      ],
       "metadata": {
         "id": "4ZPi5prKZro5"
       },
       "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "i\n",
+        "me\n",
+        "my\n",
+        "myself\n",
+        "we\n",
+        "our\n",
+        "ours\n",
+        "ourselves\n",
+        "you\n",
+        "your\n",
+        "yours\n",
+        "yourself\n",
+        "yourselves\n",
+        "he\n",
+        "him\n",
+        "his\n",
+        "himself\n",
+        "she\n",
+        "her\n",
+        "hers\n",
+        "herself\n",
+        "it\n",
+        "its\n",
+        "itself\n",
+        "they\n",
+        "them\n",
+        "their\n",
+        "theirs\n",
+        "themselves\n",
+        "what\n",
+        "which\n",
+        "who\n",
+        "whom\n",
+        "this\n",
+        "that\n",
+        "these\n",
+        "those\n",
+        "am\n",
+        "is\n",
+        "are\n",
+        "was\n",
+        "were\n",
+        "be\n",
+        "been\n",
+        "being\n",
+        "have\n",
+        "has\n",
+        "had\n",
+        "having\n",
+        "do\n",
+        "does\n",
+        "did\n",
+        "doing\n",
+        "a\n",
+        "an\n",
+        "the\n",
+        "and\n",
+        "but\n",
+        "if\n",
+        "or\n",
+        "because\n",
+        "as\n",
+        "until\n",
+        "while\n",
+        "of\n",
+        "at\n",
+        "by\n",
+        "for\n",
+        "with\n",
+        "about\n",
+        "against\n",
+        "between\n",
+        "into\n",
+        "through\n",
+        "during\n",
+        "before\n",
+        "after\n",
+        "above\n",
+        "below\n",
+        "to\n",
+        "from\n",
+        "up\n",
+        "down\n",
+        "in\n",
+        "out\n",
+        "on\n",
+        "off\n",
+        "over\n",
+        "under\n",
+        "again\n",
+        "further\n",
+        "then\n",
+        "once\n",
+        "here\n",
+        "there\n",
+        "when\n",
+        "where\n",
+        "why\n",
+        "how\n",
+        "all\n",
+        "any\n",
+        "both\n",
+        "each\n",
+        "few\n",
+        "more\n",
+        "most\n",
+        "other\n",
+        "some\n",
+        "such\n",
+        "no\n",
+        "nor\n",
+        "not\n",
+        "only\n",
+        "own\n",
+        "same\n",
+        "so\n",
+        "than\n",
+        "too\n",
+        "very\n",
+        "s\n",
+        "t\n",
+        "can\n",
+        "will\n",
+        "just\n",
+        "don\n",
+        "should\n",
+        "now"
+      ],
+      "metadata": {
+        "id": "FX0a1D13IcK_"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
