--- a/A01794022_semana2_actividad_01.ipynb
+++ b/A01794022_semana2_actividad_01.ipynb
@@ -1981,10 +1981,10 @@
       ],
       "metadata": {
         "id": "OwU-a7eGMsub",
-        "outputId": "fddaea86-0f93-4577-ac41-b98c0c6972d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fddaea86-0f93-4577-ac41-b98c0c6972d1"
       },
       "execution_count": 114,
       "outputs": [
@@ -2025,10 +2025,10 @@
       ],
       "metadata": {
         "id": "SgzIL74ZMtGw",
-        "outputId": "e5c1f5b7-1297-4cd3-ab74-83acb0748233",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e5c1f5b7-1297-4cd3-ab74-83acb0748233"
       },
       "execution_count": 115,
       "outputs": [
@@ -2062,10 +2062,10 @@
       ],
       "metadata": {
         "id": "I4TSofBMMv9y",
-        "outputId": "92df0d1e-7c0b-475c-ca1d-7b35a9afd401",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "92df0d1e-7c0b-475c-ca1d-7b35a9afd401"
       },
       "execution_count": 116,
       "outputs": [
@@ -2697,8 +2697,8 @@
     {
       "cell_type": "code",
       "source": [
-        "ing = re.findall(r'ing\\b', ' '.join(ing_ed))\n",
-        "ed = re.findall(r'ed\\b', ' '.join(ing_ed))"
+        "ing = re.findall(r'ing\\b', ' '.join(ing_ed)) #Contar 'ing'\n",
+        "ed = re.findall(r'ed\\b', ' '.join(ing_ed)) #Contar 'ed'"
       ],
       "metadata": {
         "id": "AhGq6De2Mvyh"
@@ -2713,11 +2713,11 @@
         "print(f\"Palabras terminadas en \\\"ed\\\": {len(ed)}\")"
       ],
       "metadata": {
-        "id": "3JCTQNYkN6sg",
-        "outputId": "0f80a079-86ba-46b2-b463-78ebd6bb4dba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3JCTQNYkN6sg",
+        "outputId": "0f80a079-86ba-46b2-b463-78ebd6bb4dba"
       },
       "execution_count": 120,
       "outputs": [
@@ -2763,25 +2763,50 @@
     {
       "cell_type": "code",
       "source": [
-        "docs_lower_case = [comment.lower() for comment in docs]\n",
-        "docs_lower_case_just_words_and_spaces = [re.sub(r'(?!\\s)\\W',r'', comment) for comment in docs_lower_case]\n",
-        "docs_lower_case_just_words = [re.sub(r'\\s+',r' ', comment) for comment in docs_lower_case_just_words_and_spaces]\n",
-        "docs_lower_case_just_words[0:10]"
+        "spaces = [re.sub(r'(?!\\s)\\W',r'', j) for j in Y] #Retirar carácteres especiales\n",
+        "lower_char = [i.lower() for i in spaces] #Convertir a minúsculas\n",
+        "special_char = [re.sub(r'\\s+',r' ', k) for k in lower_char] #Retirar espacios adicionales"
       ],
       "metadata": {
-        "id": "K3kQzPOPMx0w"
+        "id": "BZLkQWdYQJyC"
       },
-      "execution_count": null,
+      "execution_count": 125,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "special_char[0:10]"
+      ],
       "metadata": {
-        "id": "mYEDlHSFMyJN"
+        "id": "mYEDlHSFMyJN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d68d00be-b259-42da-e0ec-b38266aef3b3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['wow loved this place',\n",
+              " 'crust is not good',\n",
+              " 'not tasty and the texture was just nasty',\n",
+              " 'stopped by during the late may bank holiday off rick steve recommendation and loved it',\n",
+              " 'the selection on the menu was great and so were the prices',\n",
+              " 'now i am getting angry and i want my damn pho',\n",
+              " 'honeslty it didnt taste that fresh',\n",
+              " 'the potatoes were like rubber and you could tell they had been made up ahead of time being kept under a warmer',\n",
+              " 'the fries were great too',\n",
+              " 'a great touch']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 140
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2801,27 +2826,37 @@
     {
       "cell_type": "code",
       "source": [
-        "docs_tokenized = [comment.split() for comment in docs_lower_case_just_words]\n",
-        "docs_tokenized"
+        "token_list = ' '.join(special_char) #Crear lista con tokens\n",
+        "corpus = re.findall(r'\\w+',token_list) #Seleccionar carácteres alfanuméricos"
       ],
       "metadata": {
-        "id": "kbAL9-v0V-jx"
+        "id": "DZs_etmiV-fd"
       },
-      "execution_count": null,
+      "execution_count": 143,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "docs_lower_case_just_words_one_line = ' '.join(docs_lower_case_just_words)\n",
-        "flat_tokens = re.findall(r'\\w+',docs_lower_case_just_words_one_line)\n",
-        "len(flat_tokens)"
+        "print(f\"Cantidad de tokens en el corpus: {len(corpus)}\")"
       ],
       "metadata": {
-        "id": "DZs_etmiV-fd"
+        "id": "dnBWc0OLWCK9",
+        "outputId": "73d8f9a2-1242-4923-9091-297f4adf41f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cantidad de tokens en el corpus: 10846\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
