--- a/A01794022_semana2_actividad_01.ipynb
+++ b/A01794022_semana2_actividad_01.ipynb
@@ -2841,11 +2841,11 @@
         "print(f\"Cantidad de tokens en el corpus: {len(corpus)}\")"
       ],
       "metadata": {
-        "id": "dnBWc0OLWCK9",
-        "outputId": "73d8f9a2-1242-4923-9091-297f4adf41f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dnBWc0OLWCK9",
+        "outputId": "73d8f9a2-1242-4923-9091-297f4adf41f9"
       },
       "execution_count": 144,
       "outputs": [
@@ -2880,43 +2880,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Considera la siguiente lista como tu conjunto de stopwords:\n",
-        "mis_stopwords = ['i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', 'your', 'yours', 'he', 'him', 'his', 'himself', 'she', 'her', 'hers', 'herself', 'it', 'its', 'itself', 'they', 'them', 'their', 'theirs', 'themselves', 'what', 'which', 'who', 'whom', 'this', 'that', 'these', 'those', 'am', 'is', 'are', 'was', 'were', 'be', 'been', 'being', 'have', 'has', 'had', 'having', 'do', 'does', 'did', 'doing', 'a', 'an', 'the', 'and', 'but', 'if', 'or', 'because', 'as', 'until', 'while', 'of', 'at', 'by', 'for', 'with', 'about', 'against', 'between', 'into', 'through', 'during', 'before', 'after', 'above', 'below', 'to', 'from', 'up', 'down', 'in', 'out', 'on', 'over', 'under', 'again', 'further', 'then', 'once', 'here', 'there', 'when', 'where', 'why', 'how', 'all', 'any', 'both', 'each', 'few', 'more', 'most', 'other', 'some', 'such', 'only', 'own', 'same', 'so', 'than', 'too', 'very', 's', 't', 'can', 'will', 'just', 'should', 'now', 'll']"
-      ],
-      "metadata": {
-        "id": "6FP4FF3KXGxm"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "mis_stopwords_regex = '(' + '|'.join(mis_stopwords) + ')'\n",
-        "docs_lower_case_just_words_one_line_clean = re.sub(mis_stopwords_regex, r'', docs_lower_case_just_words_one_line)\n",
-        "flat_tokens_clean = re.findall(r'\\w+',docs_lower_case_just_words_one_line_clean)\n",
-        "flat_tokens_clean"
-      ],
-      "metadata": {
-        "id": "CD8yjyq1ZrwY"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "len(flat_tokens_clean)"
-      ],
-      "metadata": {
-        "id": "4ZPi5prKZro5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "#Stop word tomadas de : https://gist.github.com/sebleier/554280\n",
+        "\n",
+        "stopwords = \"\"\"\n",
         "i\n",
         "me\n",
         "my\n",
@@ -3043,13 +3009,158 @@
         "just\n",
         "don\n",
         "should\n",
-        "now"
+        "now\n",
+        "\"\"\"\n",
+        "clean = r'\\b\\w+\\b'# Limpiar texto\n",
+        "stop_list = re.findall(clean, stopwords) #Crear lista con stopwords\n",
+        "stop_list"
       ],
       "metadata": {
-        "id": "FX0a1D13IcK_"
+        "id": "6FP4FF3KXGxm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bd28a41f-5722-4151-d11f-92aef8c55e79"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['i',\n",
+              " 'me',\n",
+              " 'my',\n",
+              " 'myself',\n",
+              " 'we',\n",
+              " 'our',\n",
+              " 'ours',\n",
+              " 'ourselves',\n",
+              " 'you',\n",
+              " 'your',\n",
+              " 'yours',\n",
+              " 'yourself',\n",
+              " 'yourselves',\n",
+              " 'he',\n",
+              " 'him',\n",
+              " 'his',\n",
+              " 'himself',\n",
+              " 'she',\n",
+              " 'her',\n",
+              " 'hers',\n",
+              " 'herself',\n",
+              " 'it',\n",
+              " 'its',\n",
+              " 'itself',\n",
+              " 'they',\n",
+              " 'them',\n",
+              " 'their',\n",
+              " 'theirs',\n",
+              " 'themselves',\n",
+              " 'what',\n",
+              " 'which',\n",
+              " 'who',\n",
+              " 'whom',\n",
+              " 'this',\n",
+              " 'that',\n",
+              " 'these',\n",
+              " 'those',\n",
+              " 'am',\n",
+              " 'is',\n",
+              " 'are',\n",
+              " 'was',\n",
+              " 'were',\n",
+              " 'be',\n",
+              " 'been',\n",
+              " 'being',\n",
+              " 'have',\n",
+              " 'has',\n",
+              " 'had',\n",
+              " 'having',\n",
+              " 'do',\n",
+              " 'does',\n",
+              " 'did',\n",
+              " 'doing',\n",
+              " 'a',\n",
+              " 'an',\n",
+              " 'the',\n",
+              " 'and',\n",
+              " 'but',\n",
+              " 'if',\n",
+              " 'or',\n",
+              " 'because',\n",
+              " 'as',\n",
+              " 'until',\n",
+              " 'while',\n",
+              " 'of',\n",
+              " 'at',\n",
+              " 'by',\n",
+              " 'for',\n",
+              " 'with',\n",
+              " 'about',\n",
+              " 'against',\n",
+              " 'between',\n",
+              " 'into',\n",
+              " 'through',\n",
+              " 'during',\n",
+              " 'before',\n",
+              " 'after',\n",
+              " 'above',\n",
+              " 'below',\n",
+              " 'to',\n",
+              " 'from',\n",
+              " 'up',\n",
+              " 'down',\n",
+              " 'in',\n",
+              " 'out',\n",
+              " 'on',\n",
+              " 'off',\n",
+              " 'over',\n",
+              " 'under',\n",
+              " 'again',\n",
+              " 'further',\n",
+              " 'then',\n",
+              " 'once',\n",
+              " 'here',\n",
+              " 'there',\n",
+              " 'when',\n",
+              " 'where',\n",
+              " 'why',\n",
+              " 'how',\n",
+              " 'all',\n",
+              " 'any',\n",
+              " 'both',\n",
+              " 'each',\n",
+              " 'few',\n",
+              " 'more',\n",
+              " 'most',\n",
+              " 'other',\n",
+              " 'some',\n",
+              " 'such',\n",
+              " 'no',\n",
+              " 'nor',\n",
+              " 'not',\n",
+              " 'only',\n",
+              " 'own',\n",
+              " 'same',\n",
+              " 'so',\n",
+              " 'than',\n",
+              " 'too',\n",
+              " 'very',\n",
+              " 's',\n",
+              " 't',\n",
+              " 'can',\n",
+              " 'will',\n",
+              " 'just',\n",
+              " 'don',\n",
+              " 'should',\n",
+              " 'now']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 151
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3065,7 +3176,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<< incluye aquí tus comentarios >>"
+        "La tokenización, esencial en el procesamiento de lenguaje natural, implica dividir un texto en unidades más pequeñas, como palabras o símbolos, para facilitar su análisis computacional. En esta práxtica se realizan técnicas de tokenización, desde segmentación de palabras hasta normalización de texto de manera simple que son esenciales para preparar datos de texto para análisis y modelado. Estas operaciones estandarizan el formato del texto, permitiendo la extracción de información útil y la mejora del rendimiento de modelos de NLP."
       ],
       "metadata": {
         "id": "o7fzbvqVbUGr"
