--- a/A01794022_semanas_03_04_Actividad.ipynb
+++ b/A01794022_semanas_03_04_Actividad.ipynb
@@ -1238,6 +1238,90 @@
     {
       "cell_type": "code",
       "source": [
+        "df.iloc[1300,:]   # verificando salida / control en otro caso"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tjeEtrUya7sD",
+        "outputId": "d79925c4-a774-4d48-a004-a369b16c99d3"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "review    I recommend this for EVERYONE who loves film, ...\n",
+              "label                                                     1\n",
+              "Name: 1300, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.iloc[1500,:]   # verificando salida / control en otro caso"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ejnklWWla0Ri",
+        "outputId": "d86c57ce-e8c5-4a8a-e8f0-66b7891e7ae8"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "review    The entire audience applauded at the conclusio...\n",
+              "label                                                     1\n",
+              "Name: 1500, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.iloc[1125,:]   # verificando tu salida"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VfBocvW0avL0",
+        "outputId": "d1d87b42-f58b-43ac-8a15-45992de8115a"
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "review    10/10  \n",
+              "label           1\n",
+              "Name: 1125, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 86
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df.iloc[1788,:]   # verificando tu salida"
       ],
       "metadata": {
