--- a/A01794022_semanas_03_04_Actividad.ipynb
+++ b/A01794022_semanas_03_04_Actividad.ipynb
@@ -2483,7 +2483,8 @@
         "\n",
         "- Hay muchas palabras que se utilizan en ambos tipos de comentarios. Esto genera una baja correlación entre las palabras individuales y las etiquetas de los comentarios. Es posible que gran parte de la información esté contenida en el contexto que rodea a cada palabra, lo que indica la importancia de considerar las palabras vecinas para comprender su significado en el contexto del comentario.\n",
         "-  A pesar de experimentar con diferentes combinaciones de hiperparámetros, los mejores resultados se obtuvieron con los valores predeterminados para cada los modelos ya que ajustar otros, me generaba error y para corregirlo, solia usar cross validation, pero se sugeria no hacerlo, entonces, no se usó al final. Esto puede indicar que los modelos predeterminados son suficientes para este conjunto de datos específico o que la búsqueda de hiperparámetros necesitaría ajustes adicionales para obtener mejoras significativas.\n",
-        "-  Se señala una observación interesante en relación con los valores de falsos positivos (FP) y falsos negativos (FN) en la matriz de confusión. Este hallazgo destaca la complejidad de la interpretación de los comentarios y la necesidad de técnicas más avanzadas para capturar su verdadero significado.\n",
+        "- A pesar de las expectativas de un rendimiento claramente superior de TF-IDF, se observa que la mejora en comparación con la matriz de conteo de palabras es significativa.\n",
+        "- Se señala una observación interesante en relación con los valores de falsos positivos (FP) y falsos negativos (FN) en la matriz de confusión. Este hallazgo destaca la complejidad de la interpretación de los comentarios y la necesidad de técnicas más avanzadas para capturar su verdadero significado.\n",
         "\n",
         "\n",
         "###### **FIN PARA AGREGAR TUS CONCLUSIONES FINALES.**\n",
