--- a/MNA_NLP_semana_6_7_modelado_topicos_equipo_2.ipynb
+++ b/MNA_NLP_semana_6_7_modelado_topicos_equipo_2.ipynb
@@ -46,13 +46,10 @@
       "source": [
         "#### **Nombres y matrículas de los integrantes del equipo:**\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "* Samuel Aguilar\n",
-        "* Luis Aguilar\n",
-        "* Jorge Acosta\n",
-        "* Fernando Acevedo\n",
+        "*   Samuel Emanuel Aguilar Garcia - A00816565\n",
+        "*   Luis Alejandro Aguilar Díaz - A01795362\n",
+        "*   Fernando Acevedo Ortegate - A01794022\n",
+        "*   Jorge Antonio Acosta Rosales - A01381552\n",
         "\n"
       ],
       "metadata": {
@@ -70,18 +67,20 @@
       },
       "source": [
         "# Aquí deberás incluir todas las librerías que requieras durante esta actividad:\n",
+        "import scipy\n",
+        "import gensim\n",
         "import pandas as pd\n",
-        "from nltk.stem import WordNetLemmatizer\n",
-        "import nltk\n",
-        "import re\n",
         "import spacy\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "nlp = spacy.load(\"es_core_news_sm\")\n",
         "\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from collections import Counter\n",
+        "import gensim\n",
+        "import gensim.corpora as corpora\n",
         "\n",
-        "\n",
-        "nltk.download('wordnet')\n",
-        "nlp = spacy.load('en_core_web_sm')\n"
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.decomposition import TruncatedSVD\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -108,11 +107,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Descarga los 3 archivos de Canvas y genera un nuevo DataFrame de Pandas con ellos.\n",
+        "Descarga el archivo noticiasTopicModeling.txt que se encuentra en Canvas. Este archivo consiste en\n",
+        "5658 noticias de varios periódicos de España. El archivo de texto es una lista en el siguiente\n",
+        "formato:\n",
         "\n",
-        "**Llama simplemente \"df\" a dicho DataFrame.**\n",
+        "**[{“titular”:”Encabezado“, “texto”:”Cuerpo”}, ... , {“titular”:”Encabezado”,”texto”:”Cuerpo”}]**\n",
         "\n",
-        "Los archivos los encuentras en Canvas: amazon5.txt, imdb5.txt, yelp5.txt.\n",
+        "Donde “titular” es el encabezado de la noticia y “texto” es el cuerpo del texto de dicha noticia. En\n",
+        "particular en esta actividad trabajarás solamente con los cuerpos de las noticias, sin incluir los\n",
+        "encabezados. Carga dicho archivo y genera un DataFrame de Pandas llamado “df” y que contiene\n",
+        "una única columna llamada “noticia” con 5658 renglones formados por los cuerpos de las noticias.\n",
         "\n"
       ],
       "metadata": {
@@ -122,16 +126,13 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "# ******* Inlcuye a continuación todas las líneas de código y celdas que requieras: ***********\n",
         "\n",
-        "df_amazon = pd.read_csv(\"/content/amazon5.txt\", sep='\\t', names= ['review','tag'])\n",
-        "df_imdb = pd.read_csv(\"/content/imdb5.txt\", sep=r'\\s{3}', names= ['review','tag'], engine='python')\n",
-        "df_yelp = pd.read_csv(\"/content/yelp5.txt\", sep='\\t', names= ['review','tag'])\n",
+        "df = pd.read_json('./noticiasTopicModeling.txt')['titular'].to_frame()\n",
+        "df.rename(columns = {'titular':'noticia'}, inplace = True)\n",
+        "df.info()\n",
         "\n",
-        "df = pd.concat([df_amazon, df_imdb, df_yelp])\n",
-        "\n",
-        "# *********** Aquí termina la sección de agregar código *************\n"
+        "# *********** Aquí termina la sección de agregar código *************"
       ],
       "metadata": {
         "id": "T_lyEFRkxzC6"
@@ -175,7 +176,6 @@
       "cell_type": "code",
       "source": [
         "# Y veamos sus primeros registros:\n",
-        "\n",
         "df.head()"
       ],
       "metadata": {
@@ -486,9 +486,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Realiza el proceso de limpieza.\n",
+        "Realiza un proceso de limpieza. Aplica el preprocesamiento que consideres adecuado para texto en\n",
+        "español. Recuerda que el objetivo es identificar los tokens (palabras) que describan mejor la\n",
+        "distribución de cada tema.\n",
         "\n",
-        "Aplica el preprocesamiento que consideres adecuado, sin embargo, deberás aplicar necesariamente alguna de las técnicas de lematización.\n",
+        "NOTA: Recuerda que esta es una técnica no supervisada, por lo que no requerimos hacer una\n",
+        "partición de los datos.\n",
         "\n",
         "\n",
         "\n",
